--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fab fa-cv"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
