--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fab fa-cv"></i></a>
-                        <a class="social-icon" href="mailto:cesare.villiger@bluewin.ch"><i class="fab fa-at"></i></a>
+                        <a class="social-icon" href="mailto:cesare.villiger@bluewin.ch"><i class="fa fa-at"></i></a>
                     </div>
                 </div>
             </section>
