--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
                         <span class="text-primary">Villiger</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:cesare.villiger@bluewin.ch">cesare.villiger@bluewin.ch</a>
+                        MA Student Economics and Data Science
+                    </div>
+                    <div class="subheading mb-5">
+                        UZH | ETH
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fab fa-cv"></i></a>
                         <a class="social-icon" href="mailto:cesare.villiger@bluewin.ch"><i class="fa fa-at"></i></a>
+                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fa fa-user-circle"></i></a>
                     </div>
                 </div>
             </section>
