--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
                         <span class="text-primary">Villiger</span>
                     </h1>
                     <div class="subheading mb-5">
-                        MA Student Economics and Data Science
-                    </div>
-                    <div class="subheading mb-5">
-                        UZH | ETH
+                        <p>MA Student Economics and Data Science</p>
+                        <p>UZH | ETH</p>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
