--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -52,7 +55,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="mailto:cesare.villiger@bluewin.ch"><i class="fa fa-at"></i></a>
-                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fa fa-user-circle"></i></a>
+                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="ai ai-cv"></i></a>
                     </div>
                 </div>
             </section>
@@ -126,18 +129,14 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="devicon-python-plain"></i>
+                        <li class="list-inline-item"><i class="devicon-matlab-plain"></i>
+                        <li class="list-inline-item"><i class="devicon-latex-original"></i>
+                        <li class="list-inline-item"><i class="devicon-github-original"></i>
+                        <li class="list-inline-item"><i class="devicon-r-original"></i>
+                        <li class="list-inline-item"><i class="devicon-canva-original"></i>
+                        <li class="list-inline-item"><i class="devicon-postgresql-plain"></i>
+                        
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
