--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         <span class="text-primary">Villiger</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <p>MA Student Economics and Data Science</p>
-                        <p>UZH | ETH</p>
+                        <pre>MA Student Economics and Data Science
+                        UZH | ETH</pre>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
@@ -70,6 +70,7 @@
                             <div class="subheading mb-3">Intelitec Solutions</div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
+                        <img src="pic_trulli.jpg" alt="Italian Trulli">
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
