--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                             <div class="subheading mb-3">Intelitec Solutions</div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
-                        <img src="pic_trulli.jpg" alt="Italian Trulli">
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <img src="icon.jpg" alt="Italian Trulli">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
