--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                         <span class="text-primary">Villiger</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <pre>MA Student Economics and Data Science
-                        UZH | ETH</pre>
+                        MA Student Economics and Data Science <br>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
@@ -68,7 +67,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, <br>
+                                going forward, a new normal that has evolved from generation X is on the runway heading towards a <br> 
+                                streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
                         <img src="/assets/img/icon.png" width="250" height="200" style="border:5px double black;" alt="Italian Trulli">
                     </div>
