--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <div class="subheading mb-3">Intelitec Solutions <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fa-solid fa-file-pdf"></i></div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, <br>
                                 going forward, a new normal that has evolved from generation X is on the runway heading towards a <br> 
                                 streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
