--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         MA Student Economics and Data Science <br>
+                        UZH | ETH
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
@@ -66,12 +67,12 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fa-solid fa-file-pdf"></i></div>
+                            <div class="subheading mb-3">Intelitec Solutions <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, <br>
                                 going forward, a new normal that has evolved from generation X is on the runway heading towards a <br> 
                                 streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
-                        <img src="/assets/img/icon.png" width="250" height="200" style="border:5px double black;" alt="Italian Trulli">
+                        <img src="/assets/img/icon.png" width="300" height="200" style="border:5px double black;" alt="Italian Trulli">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
