--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="mailto:cesare.villiger@bluewin.ch"><i class="fa fa-at"></i></a>
-                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="ai ai-cv"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-github" target="_blank"></i></a>
+                        <a class="social-icon" href="mailto:cesare.villiger@bluewin.ch" target="_blank"><i class="fa fa-at"></i></a>
+                        <a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="ai ai-cv"></i></a>
                     </div>
                 </div>
             </section>
@@ -67,7 +67,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions <a class="social-icon" href="/js/Linear_Algebra_I.pdf"><i class="fa-solid fa-file-pdf"></i></a></div>
+                            <div class="subheading mb-3">Intelitec Solutions <a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, <br>
                                 going forward, a new normal that has evolved from generation X is on the runway heading towards a <br> 
                                 streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
