--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                         MA Student Economics and Data Science <br>
                         UZH | ETH
                     </div>
+                    <p class="mb-5"> <span class="text-primary">"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
+                        I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt."</span>  </p>
                     <p class="lead mb-5">As you gather from my attached CV, I finished my bachelor’s degree in economics and informatics at 
                         the UZH in 2021 and grew fond of the connection between economics and data science, hence my choice for the master’s degree. 
                         My main interests lie in monetary and public policy, as well as international and labour economics. I am also taken by the possibilities 
@@ -57,8 +59,7 @@
                         Economics and data science all offer a broach range of stimulating topics to delve into. By combing through countless amounts of 
                         material and acquiring valuable programming skills over various languages (R, Python and Matlab), I discovered my avid hunger for ever 
                         more knowledge and experience. </p>
-                     <p class="lead mb-5"> <span class="text-primary">"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
-                        I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt."</span>  </p>
+                     
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/c-villiger"><i class="fab fa-github" target="_blank"></i></a>
