--- a/index.html
+++ b/index.html
@@ -116,18 +116,22 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Eidgenössische Technische Hochschule (ETH)</h3>
+                            <div class="subheading mb-3">Special Students Program: MSc in Data Science, Statistics and Economics</div>
+                            <p>24/30 ECTS of electives courses expected to be completed at ETH, covering multivariate statistics, statistical regression and applied time series analysis.</p>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">University of Zurich (UZH)</h3>
+                            <div class="subheading mb-3">MA Economics and Data Science</div>
+                            <p>Current Average Grade: 5.7.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">University of Zurich (UZH)</h3>
+                            <div class="subheading mb-3">BA Economics and Informatics</div>
+                            <p>Final Grade: 5.1 (magna cum laude).</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
