--- a/index.html
+++ b/index.html
@@ -120,12 +120,15 @@
                             <div class="subheading mb-3">Special Students Program: MSc in Data Science, Statistics and Economics</div>
                             <p>24/30 ECTS of electives courses expected to be completed at ETH, covering multivariate statistics, statistical regression and applied time series analysis.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2022 - Feb. 2024</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Zurich (UZH)</h3>
                             <div class="subheading mb-3">MA Economics and Data Science</div>
                             <p>Current Average Grade: 5.7.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb. 2022 - Feb. 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -133,7 +136,7 @@
                             <div class="subheading mb-3">BA Economics and Informatics</div>
                             <p>Final Grade: 5.1 (magna cum laude).</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - Feb. 2022</span></div>
                     </div>
                 </div>
             </section>
