--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         MA Student Economics and Data Science <br>
                         UZH | ETH
                     </div>
-                    <p class="subheading mb-5"> <span class="text-primary">"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
-                        I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt."</span>  </p>
+                    <p class="lead mb-5"> <span class="text-primary"> <font size="+2">"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
+                        I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt." </font></span>  </p>
                     <p class="lead mb-5">As you gather from my attached CV, I finished my bachelor’s degree in economics and informatics at 
                         the UZH in 2021 and grew fond of the connection between economics and data science, hence my choice for the master’s degree. 
                         My main interests lie in monetary and public policy, as well as international and labour economics. I am also taken by the possibilities 
