--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Zurich (UZH)</h3>
-                            <div class="subheading mb-3">BA Economics and Informatics <div class="subheading mb-3">Intelitec Solutions&nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div></div>
+                            <div class="subheading mb-3">BA Economics and Informatics <div class="subheading mb-3">Intelitec Solutions&nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-diploma"></i></a></div></div>
                             <p>Final Grade: 5.1 (magna cum laude).</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - Feb. 2022</span></div>
@@ -169,6 +169,7 @@
                         <li class="list-inline-item"><i class="devicon-r-original"></i>
                         <li class="list-inline-item"><i class="devicon-canva-original"></i>
                         <li class="list-inline-item"><i class="devicon-postgresql-plain"></i>
+                        <li class="list-inline-item"><i class="fa-brands fa-html5"></i>
                         
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
