--- a/index.html
+++ b/index.html
@@ -163,13 +163,14 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="devicon-python-plain"></i>
+                        <li class="list-inline-item"><i class="devicon-r-original"></i>    
                         <li class="list-inline-item"><i class="devicon-matlab-plain"></i>
-                        <li class="list-inline-item"><i class="devicon-latex-original"></i>
-                        <li class="list-inline-item"><i class="devicon-github-original"></i>
-                        <li class="list-inline-item"><i class="devicon-r-original"></i>
-                        <li class="list-inline-item"><i class="devicon-canva-original"></i>
                         <li class="list-inline-item"><i class="devicon-postgresql-plain"></i>
                         <li class="list-inline-item"><i class="fa-brands fa-html5"></i>
+                        <li class="list-inline-item"><i class="devicon-latex-original"></i>
+                        <li class="list-inline-item"><i class="devicon-github-original"></i>
+                        <li class="list-inline-item"><i class="fa-brands fa-windows"></i>
+                        <li class="list-inline-item"><i class="devicon-canva-original"></i>
                         
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
