--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bachelor Thesis</h3>
                             <div class="subheading mb-3">Estimation of influence of railway construction on Swiss GDP using extended generalised method of moments framework.
-                                &nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refer
                                 191 districts of Switzerland over a period of five decades. In the
                                 estimation of a dynamic panel model, an endogeneity problem of the error terms with the lagged dependent variable arises (Nickell, 1981). This problem is solved by a generalised method of moments (GMM).
