--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 to their advantage and were able to maintain this advantage over the entire
                                 over the entire period under consideration.</p>
                         </div>
-                        <img src="/assets/img/icon.png" width="300" height="200" style="border:5px double black;" alt="Italian Trulli">
+                        <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
                     
                 </div>
