--- a/index.html
+++ b/index.html
@@ -81,6 +81,47 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Semester Report: Statistical Finance III</h3>
+                            <div class="subheading mb-3">
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                            <p>Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refer
+                                191 districts of Switzerland over a period of five decades. In the
+                                estimation of a dynamic panel model, an endogeneity problem of the error terms with the lagged dependent variable arises (Nickell, 1981). This problem is solved by a generalised method of moments (GMM).
+                                method of moments [GMM]), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998).
+                                Bond (1998); this yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive.
+                                significantly positive, suggesting that certain districts have been able to use railway construction to their
+                                to their advantage and were able to maintain this advantage over the entire
+                                over the entire period under consideration.</p>
+                        </div>
+                        <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Semester Report: Statistical Finance II</h3>
+                            <div class="subheading mb-3">
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                            <p>Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refer
+                                191 districts of Switzerland over a period of five decades. In the
+                                estimation of a dynamic panel model, an endogeneity problem of the error terms with the lagged dependent variable arises (Nickell, 1981). This problem is solved by a generalised method of moments (GMM).
+                                method of moments [GMM]), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998).
+                                Bond (1998); this yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive.
+                                significantly positive, suggesting that certain districts have been able to use railway construction to their
+                                to their advantage and were able to maintain this advantage over the entire
+                                over the entire period under consideration.</p>
+                        </div>
+                        <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Semester Report: Statistical Finance I</h3>
+                            <div class="subheading mb-3">Expected Shortfall of Stable Paretian Distribution.
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                            <p>In this report, we simulate the stable Paretian distribution and sums thereof for different tail indices and compare the theoretical to the empirical expected shortfall.</p>
+                        </div>
+                        <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Bachelor Thesis</h3>
                             <div class="subheading mb-3">Estimation of influence of railway construction on Swiss GDP using extended generalised method of moments framework.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
