--- a/index.html
+++ b/index.html
@@ -82,32 +82,18 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Semester Report: Statistical Finance III</h3>
-                            <div class="subheading mb-3">
+                            <div class="subheading mb-3">Multivariate t and the Expectation Maximisation Algorithm.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p>Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refer
-                                191 districts of Switzerland over a period of five decades. In the
-                                estimation of a dynamic panel model, an endogeneity problem of the error terms with the lagged dependent variable arises (Nickell, 1981). This problem is solved by a generalised method of moments (GMM).
-                                method of moments [GMM]), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998).
-                                Bond (1998); this yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive.
-                                significantly positive, suggesting that certain districts have been able to use railway construction to their
-                                to their advantage and were able to maintain this advantage over the entire
-                                over the entire period under consideration.</p>
+                            <p>In this report, we simulate random variates of the multivariate t distribution and use the MMF algorithm, an improvement on the EM algorithm, to estimate its paramters. We compare the estimate to the ones given by MLE and weighted estimates thereof.</p>
                         </div>
                         <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Semester Report: Statistical Finance II</h3>
-                            <div class="subheading mb-3">
+                            <div class="subheading mb-3">Bootstrap for Expected Shortfall of Noncentral t.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p>Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refer
-                                191 districts of Switzerland over a period of five decades. In the
-                                estimation of a dynamic panel model, an endogeneity problem of the error terms with the lagged dependent variable arises (Nickell, 1981). This problem is solved by a generalised method of moments (GMM).
-                                method of moments [GMM]), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998).
-                                Bond (1998); this yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive.
-                                significantly positive, suggesting that certain districts have been able to use railway construction to their
-                                to their advantage and were able to maintain this advantage over the entire
-                                over the entire period under consideration.</p>
+                            <p>In this report, we simulate random variates for the noncentral t distribution and copmare the coverage accuracies of confidence intervals for the expected shortfall based on the parametric and non-parametric bootstrap.</p>
                         </div>
                         <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
