--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Semester Report: Statistical Finance III</h3>
                             <div class="subheading mb-3">Multivariate t and the Expectation Maximisation Algorithm.
-                                &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/Homework3CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>In this report, we simulate random variates of the multivariate t distribution and use the MMF algorithm, an improvement on the EM algorithm, to estimate its paramters. We compare the estimate to the ones given by MLE and weighted estimates thereof.</p>
                         </div>
                         <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
@@ -92,7 +92,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Semester Report: Statistical Finance II</h3>
                             <div class="subheading mb-3">Bootstrap for Expected Shortfall of Noncentral t.
-                                &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/Homework2CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>In this report, we simulate random variates for the noncentral t distribution and copmare the coverage accuracies of confidence intervals for the expected shortfall based on the parametric and non-parametric bootstrap.</p>
                         </div>
                         <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
@@ -101,7 +101,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Semester Report: Statistical Finance I</h3>
                             <div class="subheading mb-3">Expected Shortfall of Stable Paretian Distribution.
-                                &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/Homework1CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>In this report, we simulate the stable Paretian distribution and sums thereof for different tail indices and compare the theoretical to the empirical expected shortfall.</p>
                         </div>
                         <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
