--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/Homework3CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>In this report, we simulate random variates of the multivariate t distribution and use the MMF algorithm, an improvement on the EM algorithm, to estimate its paramters. We compare the estimate to the ones given by MLE and weighted estimates thereof.</p>
                         </div>
-                        <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
+                        <img src="/assets/img/3.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -95,7 +95,7 @@
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/Homework2CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>In this report, we simulate random variates for the noncentral t distribution and copmare the coverage accuracies of confidence intervals for the expected shortfall based on the parametric and non-parametric bootstrap.</p>
                         </div>
-                        <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
+                        <img src="/assets/img/2.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -104,7 +104,7 @@
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/Homework1CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>In this report, we simulate the stable Paretian distribution and sums thereof for different tail indices and compare the theoretical to the empirical expected shortfall.</p>
                         </div>
-                        <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
+                        <img src="/assets/img/1.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
