--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Semester Report: Statistical Finance II</h3>
                             <div class="subheading mb-3">Bootstrap for Expected Shortfall of Noncentral t.
-                                &nbsp;&nbsp;<a class="social-icon" href="/js/Homework2CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                                &nbsp;&nbsp;<a class="social-icon" href="/js/Homework2CESAREVILLIGER_updated.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>In this report, we simulate random variates for the noncentral t distribution and copmare the coverage accuracies of confidence intervals for the expected shortfall based on the parametric and non-parametric bootstrap.</p>
                         </div>
                         <img src="/assets/img/2.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
@@ -134,38 +134,15 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions&nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, <br>
-                                going forward, a new normal that has evolved from generation X is on the runway heading towards a <br> 
-                                streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Research and Teaching Assistant</h3>
+                            <div class="subheading mb-3">Institute of Banking & Finance (UZH)</div>
+                            <p>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, and administrative supervision.
+                                Co-creation and lecturing in the courses "Climate Change Finance" and "eFundamentals of Programming".
+                                Data gathering and visualisation for various professors at the Institute of Banking & Finance.</p>
                         </div>
-                        <img src="/assets/img/icon.png" width="300" height="200" style="border:5px double black;" alt="Italian Trulli">
+                        
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
+                   
                 </div>
             </section>
             <hr class="m-0" />
