--- a/index.html
+++ b/index.html
@@ -136,11 +136,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research and Teaching Assistant</h3>
                             <div class="subheading mb-3">Institute of Banking & Finance (UZH)</div>
-                            <p>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, and administrative supervision.
-                                Co-creation and lecturing in the courses "Climate Change Finance" and "eFundamentals of Programming".
-                                Data gathering and visualisation for various professors at the Institute of Banking & Finance.</p>
+                            <ul>
+                              <li>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, and administrative supervision.</li>
+                              <li>Co-creation and lecturing in the courses "Climate Change Finance" and "eFundamentals of Programming".</li>
+                              <li>Data gathering and visualisation for various professors at the Institute of Banking & Finance.</li>
+                            </ul>
                         </div>
-                        
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2020 - now</span></div>
                     </div>
                    
                 </div>
