--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     </div>
                     <p class="lead mb-5"> <span class="text-primary"> <font size="+2">"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
                         I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt." </font></span>  </p>
-                    <p class="lead mb-5">As you gather from my attached CV, I finished my bachelor’s degree in economics and informatics at 
-                        the UZH in 2021 and grew fond of the connection between economics and data science, hence my choice for the master’s degree. 
+                    <p class="lead mb-5">I finished my bachelor’s degree in economics and informatics at 
+                        the UZH in 2021 and grew fond of the connection between economics and data science. 
                         My main interests lie in monetary and public policy, as well as international and labour economics. I am also taken by the possibilities 
                         of machine learning to expand on the econometric toolset and discover crucial insights that were previously unattainable. 
                         Economics and data science all offer a broach range of stimulating topics to delve into. By combing through countless amounts of 
@@ -111,14 +111,8 @@
                             <h3 class="mb-0">Bachelor Thesis</h3>
                             <div class="subheading mb-3">Estimation of influence of railway construction on Swiss GDP using extended generalised method of moments framework.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p>Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refer
-                                191 districts of Switzerland over a period of five decades. In the
-                                estimation of a dynamic panel model, an endogeneity problem of the error terms with the lagged dependent variable arises (Nickell, 1981). This problem is solved by a generalised method of moments (GMM).
-                                method of moments [GMM]), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998).
-                                Bond (1998); this yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive.
-                                significantly positive, suggesting that certain districts have been able to use railway construction to their
-                                to their advantage and were able to maintain this advantage over the entire
-                                over the entire period under consideration.</p>
+                            <p>Absract: Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refers to 191 districts of Switzerland over a period of five decades. In the estimation of a dynamic panel model, an endogeneity problem between the error terms and the lagged dependent variable arises (Nickell, 1981). This problem can be solved by a generalised method of moments estimator (GMM), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998), which yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive. This suggests that certain districts have used railway construction to their advantage and were able to maintain this advantage over the entire period under consideration.
+</p>
                         </div>
                         <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
