--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         MA Student Economics and Data Science <br>
                         UZH | ETH
                     </div>
-                    <p class="lead mb-5"> <span class="text-primary"> <font size="+2">"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
-                        I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt." </font></span>  </p>
+                    <p class="lead mb-5"> <span class="text-primary"> <font size="+2"><i>"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
+                        I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt."</i> </font></span>  </p>
                     <p class="lead mb-5">I finished my bachelor’s degree in economics and informatics at 
                         the UZH in 2021 and grew fond of the connection between economics and data science. 
                         My main interests lie in monetary and public policy, as well as international and labour economics. I am also taken by the possibilities 
