--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                         <li class="list-inline-item"><i class="devicon-canva-original"></i>
                         
                     </ul>
+                    <!--
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
@@ -216,7 +217,7 @@
                             Agile Development & Scrum
                         </li>
                     </ul>
-                </div>
+                </div>-->
             </section>
             <hr class="m-0" />
             <!-- Interests
